--- a/client/components/css/style.css
+++ b/client/components/css/style.css
@@ -9,6 +9,39 @@ body {
   border: 1px solid lightgray;
   background: white;
   box-shadow: 0 0 0 5px rgba(0,0,0,0.03);
+  position: relative;
+}
+.block-photo:hover {
+  box-shadow: 0 0 0 5px rgba(0,0,0,0.1);
+}
+.block-photo .block-photo-img {
+  position: relative;
+}
+.block-photo .block-photo-img .block-photo-caption {
+  display: none;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  color: #FFF;
+  margin: 0;
+  padding: 10px;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+0&0+0,0.65+77 */
+  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 77%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 77%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 77%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */
+}
+.block-photo:hover .block-photo-img .block-photo-caption {
+  display: block;
+}
+.block-photo img {
+  width: 100%;
+  display: block;
+}
+.block-photo .block-photo-author{
+  margin: 10px 0 0 0;
 }
 .padding-bottom-20p {
   padding-bottom: 20px;
