- new comment component - add phot info to comment - fix photo reducer

--- a/client/components/css/style.css
+++ b/client/components/css/style.css
@@ -71,3 +71,17 @@ body {
   font-size: 1.5rem;
   font-style: italic;
 }
+
+.block-single-photo .block-single-photo-info h3{
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.block-comments{
+  max-height: 450px;
+  overflow-y: scroll;
+}
+
+.block-comment h4{
+  font-size: 1rem;
+}
